# brightwheel-exercise

./: Makefile  README.md  docker-compose.yml  pyproject.toml
docker/: db.env
src/brightwheel_exercise/: __main__.py  configs.py  etl_service.py  normalization.py  utils.py
src/brightwheel_exercise/db/: utils.py
src/brightwheel_exercise/db/schema_migrations/: 0001.create_schema.rollback.sql  0001.create_schema.sql  0002.create_leads_table.rollback.sql  0002.create_leads_table.sql
tests/brightwheel_exercise/: test_normalization.py
